# pygobject

./: Makefile.am  configure.ac  meson.build
gi/: Makefile.am  gimodule.c  gobjectmodule.c  meson.build  pygboxed.c  pygi-argument.c  pygi-basictype.c  pygi-basictype.h  pygi-boxed.c  pygi-cache.c  pygi-cache.h  pygi-ccallback.c  pygi-closure.c  pygi-error.c  pygi-info.c  pygi-invoke.c  pygi-invoke.h  pygi-python-compat.h  pygi-repository.c  pygi-resulttuple.c  pygi-struct.c  pygi-type.c  pygi-util.h  pygi-value.c  pyginterface.c  pyglib-python-compat.h  pygobject-object.c  pygobject.c  pygobject.h  pygparamspec.c  pygpointer.c  pygtype.c
gi/overrides/: GObject.py  meson.build
gi/repository/: meson.build
pygtkcompat/: meson.build
subprojects/: gobject-introspection.wrap
tests/: Makefile.am  __init__.py  gimarshallingtestsextra.h  meson.build  python2.7.supp  test_cairo.py  test_everything.py  test_fields.py  test_gobject.py  test_import_machinery.py  test_internal_api.py  test_overrides_gdk.py  test_overrides_gtk.py  test_repository.py  test_signal.py  testhelpermodule.c
